--- a/angular/Empleados/src/app/app.component.html
+++ b/angular/Empleados/src/app/app.component.html
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="container mt-5">
   <div class="row">
     <div class="col-5">
       <app-formulario (enviarEmpleado)="handleEnviarEmpleado($event)"></app-formulario>
