--- a/angular/Formularios/src/app/model/model.component.html
+++ b/angular/Formularios/src/app/model/model.component.html
@@ -1,7 +1,15 @@
 <form [formGroup]="formulario" (ngSubmit)="onSubmit()">
     <div class="form-group">
         <label>Nombre</label>
-        <input type="text" class="form-control" formControlName="nombre">
+        <input type="text" class="form-control" formControlName="nombre" placeholder="Introduce tu nombre">
+        <div class="error" *ngIf="formulario.controls.nombre.errors?.required && formulario.controls.nombre.touched">
+            El campo nombre es requerido
+        </div>
+        <div class="error" *ngIf="formulario.controls.nombre.errors?.maxlength && formulario.controls.nombre.touched">
+            El campo nombre debe ser menor de {{formulario.controls.nombre.errors.maxlength.requiredLength}} caracteres
+            y tu has escrito {{formulario.controls.nombre.errors.maxlength.actualLength}}
+        </div>
+        <p>{{ formulario.controls.nombre.errors | json }}</p>
     </div>
     <div class="form-group">
         <label>Apellidos</label>
@@ -14,6 +22,10 @@
     <div class="form-group">
         <label>Edad</label>
         <input type="text" class="form-control" formControlName="edad">
+        <div class="error" *ngIf="formulario.controls.edad.errors?.validatorEdad && formulario.controls.edad.touched">
+            El campo edad debe estar entre {{ formulario.controls['edad'].errors.validatorEdad.min }} y
+            {{ formulario.controls['edad'].errors.validatorEdad.max }}
+        </div>
     </div>
     <div class="form-group">
         <label>Password</label>
@@ -23,5 +35,16 @@
         <label>Repite Password</label>
         <input type="password" class="form-control" formControlName="repite_password">
     </div>
-    <input type="submit" value="Enviar">
+    <input type="submit" value="Enviar" [disabled]="!formulario.valid">
 </form>
+
+<p>
+    {{ formulario.valid }}
+    {{ formulario.touched }}
+    {{ formulario.pristine }}
+</p>
+<p>
+    {{ formulario.controls['nombre'].valid }}
+    {{ formulario.controls['nombre'].touched }}
+    {{ formulario.controls['nombre'].dirty }}
+</p>
